# Cobra

./: Cargo.toml  README.md  build.rs
src/: cobra_struct.rs  consts.rs  global.rs  lib.rs  main.rs  reader.rs  reading_loop.rs  structs.rs  ui.rs  utils.rs
src/network/: mod.rs
src/reader/: mod.rs  reader_beatmap.rs  reader_resultscreen.rs  structs.rs
src/reader2/: init_reading.rs  mod.rs  reader_gameplay.rs  reader_resultscreen.rs
src/utils/: api.rs  mod.rs  nps.rs  rate.rs
src/utils/pattern_detector/: mod.rs
src/utils/pattern_detector/mania/: detector.rs  mod.rs  structs.rs  transform.rs
ui/: app-window.slint
