[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
slint = "1.8.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12.12", features = ["json", "blocking", "stream"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
image = "0.25.5"
open = "5.0"
futures-util = "0.3.31"
bytes = "1.10.0"
rosu-mem = { git = "https://github.com/486c/rosu-mem.git", tag = "v1.0.0" }
eyre = "0.6.12"


[build-dependencies]
slint-build = "1.8.0"
